fix cypress and margin spacing

--- a/services/app-web/src/pages/StateDashboard/StateDashboard.module.scss
+++ b/services/app-web/src/pages/StateDashboard/StateDashboard.module.scss
@@ -34,8 +34,14 @@
     }
 }
 
-.stateDashboard .panelHeader {
-    padding-bottom: 0;
+.stateDashboard {
+    h1 {
+        margin-top: 32px;
+        margin-bottom: 32px;
+    }
+    .panelHeader {
+        padding-bottom: 0;
+    }
 }
 
 .filterCount {
